--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -147,14 +147,14 @@ body {
   }
 
   table {
-    border: 1px solid black;
+    /*border: 1px solid black;*/
     width: 100%;
   }
-
+  /*
   th, tr, td {
     border: 1px solid black;
   }
-
+  */
   td.align-right {
     text-align: right;
   }
