Added new things to portfolio & changed the routing of sidebars

--- a/flaskblog/templates/home.html
+++ b/flaskblog/templates/home.html
@@ -19,17 +19,17 @@
             <p><b>Here's quick guide to this site:</b></p>
             
             <ul class="home-info" type="">
-                <li> You may find the notes of different subjects on the navigation bar - <a href="{{url_for("main.blog")}}">subjects</a></li>
+                <li> <strike>You may find the notes of different subjects on the navigation bar - <a href="{{url_for("main.blog")}}">subjects</a></strike> <b>Not ready!</b></li>
                 <br>
                 <li> There is a <a href="{{url_for("main.blog")}}">blog</a> section on this site which allows you to interact with other curious minds.<br>
                      (Note that you need to create an account to make posts.) </li>
                 <br>
-                <li> There might be errors in these notes and if you notify me using the "contact" page! </li>
+                <li> <strike>There might be errors in these notes. You can notify me using the "contact" page!</strike> </li>
                 <br>
                 <li> Enjoy yourself here and be sure to tell others about this open resource! </li>
             </ul>
             <br><br>
-            <p>Quick shoutout to <b>Corey Schafer</b> on YouTube for putting up great website making content!</p>
+            <p>Quick shoutout to <b>Corey Schafer</b> on YouTube for putting up great web dev content!</p>
         </div>  
     </div>
 
