--- a/flaskblog/templates/register.html
+++ b/flaskblog/templates/register.html
@@ -37,7 +37,7 @@
                 </div>
 
                 <div class="form-group">
-                    {{ form.password.label(class="form-control-label") }} - <i>Do not use your real password</i>
+                    {{ form.password.label(class="form-control-label") }} - <i>Please use a dummy password!</i>
 
                     {% if form.password.errors %}
                         {{ form.password(class="form-control form-control-lg is-invalid") }}
