--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -35,6 +35,10 @@ body {
     color: #50bcfa;
   }
 
+  button.subject {
+    margin-bottom: 20px;
+  }
+
   .site-header .navbar-nav .nav-link.active {
     font-weight: 500;
   }
@@ -44,7 +48,8 @@ body {
     padding: 10px 20px;
     border: 1px solid #dddddd;
     border-radius: 3px;
-    margin: 20px 0px 20px 0px;
+    margin: 30px 20px 30px 0px;
+    font-size: 20px;
   }
   
   .site-main .content-section {
@@ -62,6 +67,7 @@ body {
   
   .article-title {
     color: #444444;
+    padding-bottom: 10px;
   }
   
   a.article-title:hover {
@@ -165,4 +171,9 @@ body {
 
   ul {
     padding-left: 15px;
+  }
+
+  ul.subject{
+    padding-top: 0px;
+    padding-left: 45px;
   }
