--- a/flaskblog/templates/layout.html
+++ b/flaskblog/templates/layout.html
@@ -36,14 +36,14 @@
     <header class="site-header">
         <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
             <div class="container">
-                {% if main %}
-                <a class="navbar-brand mr-4" href="?">andrew's notebook</a>
-                {% else %}
+                {% if subject %}
                     {% if topic %}
                     <a class="navbar-brand mr-4" href="?">{{ subject_name }} - {{ topic_name }}</a>
                     {% else %}
                     <a class="navbar-brand mr-4" href="?">{{ subject_name }}</a>
                     {% endif %}
+                {% else %}
+                <a class="navbar-brand mr-4" href="?">andrew's notebook</a>
                 {% endif %}
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -53,26 +53,26 @@
                     <div class="navbar-nav mr-auto">
                         <a class="nav-item nav-link" href="{{ url_for('main.home') }}">Home</a>
                         <!-------------------- Change in navbar when in subject -------------------->
-                        {% if main %}
-                        <a class="nav-item nav-link" href="{{ url_for('main.portfolio') }}">Portfolio</a>
-                        <li class="nav-item dropdown">
-                            <div class="animate-dropdown">
-                                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    Subjects
-                                </a>
-                                <div class="dropdown-menu">
-                                    <a class="dropdown-item" href="{{ url_for('chem.chem_home') }}">Chemistry</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{{ url_for('cheme.cheme_home')}}">Chemical Engineering</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{{ url_for('math.math_home') }}">Mathematics</a>
-                                    <div class="dropdown-divider"></div>
-                                    <a class="dropdown-item" href="{{ url_for('phys.phys_home')}}">Physics</a>
-                                </div>
-                            </div>
-                        </li>
-                        {% else %}
+                        {% if subject %}
                             {% block navbar %}{% endblock %}
+                        {% else %}
+                            <a class="nav-item nav-link" href="{{ url_for('main.portfolio') }}">Portfolio</a>
+                            <li class="nav-item dropdown">
+                                <div class="animate-dropdown">
+                                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                        Subjects
+                                    </a>
+                                    <div class="dropdown-menu">
+                                        <!--<a class="dropdown-item" href="{{ url_for('chem.chem_home') }}"</a>>Chemistry</a>
+                                        <div class="dropdown-divider"></div>-->
+                                        <!--<a class="dropdown-item" href="{{ url_for('cheme.cheme_home')}}">Chemical Engineering</a>
+                                        <div class="dropdown-divider"></div>-->
+                                        <a class="dropdown-item" href="{{ url_for('math.math_home') }}">Mathematics</a>
+                                        <!--<div class="dropdown-divider"></div>
+                                        <a class="dropdown-item" href="{{ url_for('phys.phys_home')}}">Physics</a>-->
+                                    </div>
+                                </div>
+                            </li>
                         {% endif %}
                         <a class="nav-item nav-link" href="{{ url_for('main.blog') }}">Blog</a>
                     </div>
