--- a/flaskblog/templates/portfolio.html
+++ b/flaskblog/templates/portfolio.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 {% block content %}
     
-    <div class="content-section">
+    <div class="content-section-portfolio">
         <h2 class="article-title"><u>Work Experience</u></h2>
 
         <!-------------------- Dow Chemical Internsip @ loc TBD -------------------->
@@ -27,7 +27,7 @@
         </div>
     </div>
 
-    <div class="content-section">
+    <div class="content-section-portfolio">
         <h2 class="article-title"><u>Research Experience</u></h2>
 
         <!-------------------- BNL w/ Dr. Tadanori Koga -------------------->
@@ -70,7 +70,7 @@
         </div>
     </div>
 
-    <div class="content-section">
+    <div class="content-section-portfolio">
         <h2 class="article-title"><u>Projects</u></h2>
 
         <!-------------------- Flask_Blog Project -------------------->
@@ -88,7 +88,7 @@
 {% endblock content %}
 
 {% block sidebar_portfolio %}
-    <div class="content-section">
+    <div class="content-section-portfolio">
         <h4><u>Education</u></h4>
 
         <table>
@@ -119,7 +119,7 @@
         </table>
     </div>
 
-    <div class="content-section">
+    <div class="content-section-portfolio">
         <h4><u>Hobbies</u></h4>
 
         <!-------------------- Reading Hobby -------------------->
@@ -191,7 +191,7 @@
         </ul>
     </div>
 
-    <div class="content-section">
+    <div class="content-section-portfolio">
         <h4><u>Interests</u></h4>
 
         <!-------------------- Personal Interests -------------------->
@@ -226,7 +226,7 @@
 
     </div>
 
-    <div class="content-section">
+    <div class="content-section-portfolio">
         <h4 class="myresume"><a class="myresume" href="{{url_for('posts.resume')}}">View Resume (.pdf)</a></h4>
     </div>
 
