--- a/flaskblog/static/main.css
+++ b/flaskblog/static/main.css
@@ -51,6 +51,14 @@ body {
     margin: 30px 20px 30px 0px;
     font-size: 20px;
   }
+
+  .content-section-portfolio {
+    background: #ffffff;
+    padding: 10px 20px;
+    border: 1px solid #dddddd;
+    border-radius: 3px;
+    margin: 30px 0px 30px 0px;
+  }
   
   .site-main .content-section {
     border-top-color: #50bcfa; 
